# template_cpp_cmake_obscura

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: module.hpp
results/test/: test.cfg
src/: CMakeLists.txt  main.cpp  module.cpp
tests/: CMakeLists.txt
